[package]
name = "clarity-proptest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clarity = { path = "../clarity" }
stacks_common = { path = "../stacks-common", package = "stacks-common" }
proptest = { version = "1.4" }
rusqlite = { version = "=0.24.2", features = ["blob", "serde_json", "i128_blob", "bundled", "trace"] }

